<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">TMAI</string>

	<!--general string-->
	<string name="toast_connection_problem">You don\'t have an internet connection</string>
	<string name="toast_file_was_uploaded_successfully">The Memo was Uploaded Successfully</string>
	<string name="toast_file_was_not_uploaded_successfully">There is a problem uploading the file try again later</string>
	<string name="toast_retrieving_location_error">There is a problem retrieving your current location try again later</string>

	<!--notification screen-->
	<string name="notification_upload_successfully_titel_text">TMAI</string>
	<string name="notification_upload_successfully_msg_text">Feedback to *** delivered</string>
	<string name="notification_entity_validation_titel_text">TMAI</string>
	<string name="notification_entity_validation_msg_text">Feedback to *** failed</string>
	<!--
	<string name="notification_upload_successfully_project_id">business id</string>
	<string name="notification_upload_successfully_project_name">business name</string>


	--><!--login screen-->
	<string name="login_screen_title_text">Login Screen</string>
	<string name="login_screen_message_text">Would you like to share your location </string>
	<string name="login_ok_button">OK</string>
	<string name="login_cancel_button">Cancel</string>

	<!--tos question-->
	<string name="tos_title_text">TOS Screen</string>
	<string name="tos_message_text">tos text here</string>
	<string name="tos_enter_email_message_text">Providing email will allow the business management to send replies to the memo</string>
	<string name="tos_with_email_button">with Email</string>
	<string name="tos_without_email_button">without Email</string>
	<string name="tos_accept_button">Accept</string>
	<string name="tos_reject_button">Reject</string>

	<!--places screen-->
	<string name="places_dialog_titel_text">Give your feedback to</string>
	<string name="places_dialog_cancel_button">Cancel</string>
	<string name="places_progress_dialog_title">Establishing connection</string>
	<string name="places_progress_dialog_message">Connecting...</string>
	<string name="places_menu_filter">Search fiter</string>
	<string name="places_menu_refresh">Refresh</string>

	
	<!--places filter screen-->
	<string name="places_filter_radius">Radius</string>
	<string name="places_filter_save_button">Save</string>
	<string name="places_filter_menu_reset">Reset fields</string>
	<string name="places_filter_toast_successful_change">The changes were successfully saved</string>
	<string name="places_filter_toast_unsuccessful_change">The changes were not successfully saved</string>
	
	

	<!--project id input popup-->
	<string name="input_titel_text">Business Id</string>
	<string name="input_message_text">Please enter a Business Id</string>
	<string name="input_ok_button">OK</string>
	<string name="input_cancel_button">Cancel</string>
	<string name="input_project_id_error">Your Business Id dosn\'t exists please try again</string>
	<string name="entity_validation_progress_dialog_title">Establishing connection</string>
	<string name="entity_validation_progress_dialog_message">Connecting...</string>

	<!--change email popup-->
	<string name="input_change_email_title_text">Change Email</string>
	<string name="input_change_email_message_text"></string>
	<string name="input_change_email_ok_button">Update</string>
	<string name="input_change_email_cancel_button">Cancel</string>
	<string name="input_change_email_changed">Your email was successfully changed</string>
	<string name="input_change_email_error">Your email is not a valid email please try again</string>

	<!--send another memo popup-->
	<string name="input_another_memo_title_text">Feedback queued for delivery</string>
	<!--<string name="input_another_memo_msg_text">This app will automatically close in *** sec.\nTo send additional feedback click</string>
	-->
	<string name="input_another_memo_msg_text">Closing the app in\n</string>
	<string name="input_another_memo_yes_button">Send additional feedback</string>
	<string name="input_another_memo_no_button">No</string>


	<!--main screen-->
	<string name="main_menu_qr_scanner">QR Scanner</string>
	
	<string name="main_titel_text">Record and Upload your feedback</string><!--
	<string name="main_enter_project">Enter business Id</string>
	<string name="main_select_project">Select business from list</string>


	--><string name="main_start_button">Start</string>
	
	<string name="main_stop_button">Stop</string>
	<string name="main_record_button">Record</string>

	<string name="main_kind_1_button">Service</string>
	<string name="main_kind_2_button">Product</string>
	<string name="main_kind_3_button">General</string>
	
	<string name="main_upload_button">Upload</string>
	
	<!--

		<string name="main_type_1_button">Type 1</string> <string
		name="main_type_2_button">Type 2</string> <string
		name="main_type_3_button">Type 3</string>
	-->
	<string name="main_allow_reply_text">Allow reply</string>
	<string name="main_change_email_button">Update email</string>
	<string name="main_send_button">Send</string>
	<string name="main_error_start_audio">Problem starting audio recording</string>

	<!--main screen labels-->
	<string name="main_label_severity">Severity</string>
	<string name="main_label_disclaimer">Your email is never sent to the Business</string>
	
	
	<string name="main_label_project_id">Business Id:</string>
	<string name="main_label_project_name">Business Name:</string>

	<!--server connection-->
	<string name="upload_file_server_url"></string>
	<string name="upload_file_server_port"></string>

	<string name="info_server_url"></string>
	<string name="info_server_port"></string>
</resources>