<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1" >

    <LinearLayout
        android:id="@+id/linearLayout_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:layout_marginTop="20sp"
        android:gravity="center" >

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tos_title_text"
            android:textColor="@color/white"
            android:textSize="28sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_message"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="40sp"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/message_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tos_message_text"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_tos_buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/accept_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tos_accept_button" />

        <Button
            android:id="@+id/reject_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tos_reject_button" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout_email_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" android:visibility="gone">

        <TextView
            android:id="@+id/email_message_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tos_enter_email_message_text"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/email_input_et"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center" android:visibility="gone">

        <Button
            android:id="@+id/without_email_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tos_without_email_button" />

        <Button
            android:id="@+id/with_email_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tos_with_email_button" />
    </LinearLayout>

</LinearLayout>